
noinst_LTLIBRARIES = libmhdf.la

libmhdf_la_SOURCES = include/mhdf.h \
                     src/adjacency.c \
                     src/connectivity.c \
                     src/file-handle.c \
                     src/file-handle.h \
                     src/file.c \
                     src/names-and-paths.h \
                     src/nodes.c \
                     src/sets.c \
                     src/status.c \
                     src/status.h \
                     src/tags.c \
                     src/util.c \
                     src/util.h

DEFS = -Iinclude -DNDEBUG
